--- a/src/style.css
+++ b/src/style.css
@@ -177,4 +177,111 @@ html {
     color: #71717A;
     font-size: 0.875rem;
   }
+
+
+.copyright {
+  color: #71717A;
+  font-size: 0.875rem;
+}
+
+
+
+/* Small devices (tablets) */
+@media screen and (min-width: 576px) {
+  html {
+    font-size: 16px;
+  }
+
+  h1 { margin: 16px 0; }
+
+  #logo {
+    display: none;
+  }
+
+  #logo-with-text {
+    display: block;
+  }
+
+  #banner {
+    height: 200px;
+  }
+
+  #footer-links li {
+    display: inline;
+    margin: 0 16px;
+  }  
+  
+}
+
+/* Medium devices (laptops) */
+@media screen and (min-width: 768px) {
+
+  #banner {
+    height: 280px;
+  }
+
+  h1 { margin: 20px 0; }
+
+  #about {
+    flex-direction: row;
+    max-width: 800px;
+  }
+
+  #description {
+    width: 50%;
+    padding-right: 8px;
+    font-size: 1.25rem;
+  }
+  
+  #team {
+    width: 50%;
+  }
+
+  #jobs {
+    max-width: 800px;
+  }
+
+  #jobs-list {
+    display: none;
+  }
+
+  #jobs-table {
+    display: table;
+    width: 100%;
+    border: 1px solid gray;
+    border-collapse: collapse;
+  }
+  
+  .jobs-header-row th {
+    border: 1px solid gray;
+    padding: 8px;
+    background-color: #BFDBFE;
+    text-align: center;
+    color: #222222;
+  }
+  
+  .jobs-data-row td {
+    border: 1px solid gray;
+    padding: 8px;
+  }
+  
+  #jobs-table tr:nth-child(odd) {
+    background-color: #EFF6FF;
+  }
+
+  #application {
+    max-width: 800px;
+  }
+
+  .form-group input, select {
+    width: auto;
+  }
+
+  .form-group textarea {
+    width: 80%;
+  }
+  
+}
+
+
   
